fix: Adding padding to content container to prevent text from being flush with right-side of title card on mobile.

--- a/src/scss/pages/_mc_index-welcome_to_mc.scss
+++ b/src/scss/pages/_mc_index-welcome_to_mc.scss
@@ -251,6 +251,7 @@ td.current_marathon_times {
     justify-content: center;
     align-items: center;
     width: 100%;
+    padding: 15px;
   }
 
   #title_card--current_marathon_details {
